# DocuMind-AI

./: .gitignore  README.md  pyproject.toml  requirements.txt
client/: app.py
client/components/: chat.py  sidebar.py
client/state/: session.py
client/utils/: api.py  helpers.py
server/: main.py
server/api/: routes.py  schemas.py
server/config/: settings.py
server/core/: document_processor.py  llm_chain_factory.py  vector_database.py
server/utils/: logger.py
